# qarax

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  audit.toml  openapi.yaml  renovate.json
.cargo/: audit.toml
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  console.rs  main.rs  wait.rs
cli/src/api/: audit_log.rs  backups.rs  boot_sources.rs  hooks.rs  hosts.rs  instance_types.rs  jobs.rs  mod.rs  models.rs  networks.rs  sandbox_pools.rs  sandboxes.rs  security_groups.rs  storage.rs  transfers.rs  vm_templates.rs  vms.rs
cli/src/commands/: audit_log.rs  backup.rs  boot_source.rs  configure.rs  hook.rs  host.rs  instance_type.rs  job.rs  mod.rs  network.rs  sandbox.rs  security_group.rs  storage.rs  transfer.rs  vm.rs  vm_template.rs
common/: Cargo.toml
common/src/: architecture.rs  cpu_list.rs  lib.rs  metrics.rs  otel.rs  telemtry.rs
e2e/: .gitignore  Containerfile.bootc-node  Dockerfile.nfs-server  Dockerfile.qarax  Dockerfile.qarax-node  Dockerfile.qemu-vm  README.md  conftest.py  docker-compose.ci.yml  docker-compose.libvirt.yml  docker-compose.vm-mode.yml  docker-compose.yml  entrypoint-qarax-node.sh  entrypoint-qemu-vm.sh  helpers.py  init-test.sh  nfs-entrypoint.sh  pyproject.toml  run_e2e_tests.sh  setup_host.sh  test_audit_log.py  test_backups.py  test_cloud_init.py  test_db.py  test_disk_resize.py  test_firecracker.py  test_gpu_scheduling.py  test_hotplug.py  test_lifecycle_hooks.py  test_live_migration.py  test_network.py  test_node_upgrade.py  test_numa.py  test_resize.py  test_sandboxes.py  test_snapshots.py  test_storage_types.py  test_telemetry.py  test_transfers.py  test_vm_boot_mode.py  (+1 more)
python-sdk/: README.md  pyproject.toml  ty.toml
python-sdk/examples/: basic_usage.py  vm_lifecycle.py
python-sdk/qarax-api-client/: README.md  setup.py
python-sdk/qarax-api-client/qarax_api_client/: __init__.py  client.py
python-sdk/qarax-api-client/qarax_api_client/api/audit_logs/: get.py  list_.py
python-sdk/qarax-api-client/qarax_api_client/api/backups/: create.py  get.py  list_.py  restore.py
python-sdk/qarax-api-client/qarax_api_client/api/boot_sources/: create.py  delete.py  get.py  list_.py
python-sdk/qarax-api-client/qarax_api_client/api/hooks/: create.py  delete.py  get.py  list_.py  list_executions.py  update.py
python-sdk/qarax-api-client/qarax_api_client/api/hosts/: add.py  deploy.py  evacuate.py  init.py  list_.py  list_gpus.py  list_numa_nodes.py  node_upgrade.py  resources.py  update.py  update_placement.py
python-sdk/qarax-api-client/qarax_api_client/models/: __init__.py  accelerator_config.py  attach_disk_request.py  attach_host_request.py  attach_pool_host_request.py  attach_security_group_request.py  audit_action.py  audit_log.py  audit_resource_type.py  backup.py  backup_status.py  backup_type.py  boot_mode.py  boot_source.py  commit_vm_request.py  commit_vm_response.py  configure_sandbox_pool_request.py  create_backup_request.py  create_disk_request.py  create_disk_response.py  create_sandbox_response.py  create_snapshot_request.py  create_vm_response.py  create_vm_template_from_vm_request.py  deploy_host_request.py  disk_resize_request.py  exec_sandbox_request.py  exec_sandbox_response.py  exec_vm_request.py  exec_vm_response.py  hook_execution.py  hook_execution_status.py  hook_scope.py  host.py  host_evacuate_response.py  host_gpu.py  host_numa_node.py  host_placement_labels.py  host_resource_capacity.py  host_status.py  (+77 more)
python-sdk/templates/: client.py.jinja  model.py.jinja
qarax/: Cargo.toml
qarax-node/: Cargo.toml  README.md
qarax-node/src/: cloud_init.rs  image_preflight.rs  lib.rs  main.rs  oci_config.rs
qarax-node/src/cloud_hypervisor/: cloud_init.rs  manager.rs  mod.rs
qarax-node/src/cloud_hypervisor/manager/: api.rs  config.rs  exec.rs  helpers.rs  hotplug.rs  lifecycle.rs  migration.rs  tests.rs  vmm_impl.rs
qarax-node/src/firecracker/: exec.rs  helpers.rs  mod.rs
qarax-node/src/image_store/: manager.rs  mod.rs
qarax-node/src/networking/: bridge.rs  dhcp.rs  dnsmasq.rs  iptables.rs  mod.rs  nftables.rs  vxlan.rs
qarax-node/src/overlaybd/: manager.rs  mod.rs
qarax-node/src/services/: mod.rs
qarax-node/src/services/file_transfer/: mod.rs
qarax-node/src/services/vm/: mod.rs
qarax-node/src/storage/: block.rs  local.rs  mod.rs  nfs.rs  overlaybd.rs
qarax-node/src/vmm/: mod.rs
qarax/src/: configuration.rs  errors.rs  grpc_client.rs  hook_executor.rs  host_deployer.rs  lib.rs  main.rs  network_policy.rs  resource_monitor.rs  sandbox_pool_manager.rs  sandbox_reaper.rs  sandbox_runtime.rs  startup.rs  transfer_executor.rs  vm_monitor.rs
qarax/src/handlers/: audit.rs  mod.rs
qarax/src/handlers/audit_log/: handler.rs  mod.rs
qarax/src/handlers/backup/: handler.rs
qarax/src/handlers/boot_source/: handler.rs
qarax/src/handlers/events/: handler.rs
qarax/src/handlers/host/: handler.rs
qarax/src/handlers/instance_type/: handler.rs
qarax/src/handlers/job/: handler.rs
qarax/src/handlers/lifecycle_hook/: handler.rs
qarax/src/handlers/network/: handler.rs
qarax/src/handlers/sandbox/: handler.rs  mod.rs  pool_handler.rs
qarax/src/handlers/scheduling/: handler.rs
qarax/src/handlers/security_group/: handler.rs
qarax/src/handlers/storage_object/: handler.rs
qarax/src/handlers/storage_pool/: handler.rs
qarax/src/handlers/transfer/: handler.rs
qarax/src/handlers/vm/: handler.rs
qarax/src/handlers/vm_template/: handler.rs
qarax/src/model/: audit_log.rs  backups.rs  boot_sources.rs  events.rs  host_gpus.rs  host_numa.rs  hosts.rs  instance_types.rs  jobs.rs  lifecycle_hooks.rs  mod.rs  network_interfaces.rs  networks.rs  rate_limit_groups.rs  sandbox_pool_members.rs  sandbox_pools.rs  sandboxes.rs  security_groups.rs  snapshots.rs  storage_objects.rs  storage_pools.rs  transfers.rs  vm_consoles.rs  vm_disks.rs  vm_filesystems.rs  vm_overlaybd_disks.rs  vm_rng.rs  vm_templates.rs  vms.rs
qarax/tests/: audit_logs.rs  hosts.rs  sandbox_pools.rs  snapshots.rs  storage_cleanup.rs  storage_pools.rs  vm_templates.rs  vms.rs
(+316 files in other folders)
