[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qarax"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
toml = "0.8"
tabled = "0.17"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
crossterm = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
