[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qarax-api-client"
version = "0.1.0"
description = "Python SDK for Qarax API"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "pydantic",
]

[dependency-groups]
dev = [
    "openapi-python-client",
]
