[package]
name = "qarax-node"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "qarax-node"
path = "src/main.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full", "process"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic-health = "0.10.2"
common = { path = "../common" }
clap = { version = "4.4.8", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
tonic = "0.10.2"

anyhow = "1.0.75"
uuid = { version = "1.6.1", features = ["v4"] }
openssl = { version = "0.10.60", features = ["vendored"] }

# Cloud Hypervisor SDK
cloud-hypervisor-sdk = { git = "https://github.com/qarax/cloud-hypervisor-sdk.git", tag = "v51.0.0" }
gethostname = "0.4"

# HTTP client dependencies (same as SDK uses)
bytes = "1.5.0"
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client", "http1"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"

[dev-dependencies]
tokio-stream = { version = "0.1.14", features = ["net"] }
once_cell = "1.18.0"
