[package]
name = "qarax-node"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "qarax-node"
path = "src/main.rs"

[features]
default = []
otel = ["common/otel", "dep:opentelemetry", "dep:tracing-opentelemetry", "dep:tower", "dep:http"]
dhat-heap = ["dep:dhat"]

[dependencies]
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full", "process"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic-health = "0.10.2"
common = { path = "../common" }
clap = { version = "4.4.8", features = ["derive", "env"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
tonic = "0.10.2"

anyhow = "1.0.75"
async-trait = "0.1"
uuid = { version = "1.6.1", features = ["v4"] }
openssl = { version = "0.10.60", features = ["vendored"] }

# Cloud Hypervisor SDK
cloud-hypervisor-sdk = { git = "https://github.com/qarax/cloud-hypervisor-sdk.git", tag = "v51.1.0" }
gethostname = "0.4"

# HTTP client dependencies (same as SDK uses)
bytes = "1.5.0"
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client", "http1"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
nix = { version = "0.29", features = ["term", "fs"] }
fatfs = "0.3"
edge-dhcp = { version = "0.7", default-features = false, features = ["log"] }
socket2 = "0.5"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
num_cpus = "1"

# OpenTelemetry (behind "otel" feature)
opentelemetry = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tower = { version = "0.4", optional = true }
http = { version = "0.2", optional = true }

# Heap profiling (behind "dhat-heap" feature — never enable in production builds)
dhat = { version = "0.3", optional = true }

[dev-dependencies]
tokio-stream = { version = "0.1.14", features = ["net"] }
once_cell = "1.18.0"
tempfile = "3"
