[package]
name = "qarax"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qarax"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = { version = "0.7.1", features = ["tracing", "http2", "ws"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "json", "chrono", "ipnetwork", "macros", "runtime-tokio-rustls", "mac_address"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tower-http = { version = "0.5.0", features = ["trace", "uuid", "tokio", "cors", "request-id"] }
common = { path = "../common" }
tracing = "0.1.40"
http = "1.0.0"
tower = "0.4.13"
strum = "0.25.0"
strum_macros = "0.25.3"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
serde_with = "3.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
hyper = { version = "1.0.1", features = ["full"] }
config = "0.13.4"
macaddr = { version = "1.0.1", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tonic = "0.10.2"
prost = "0.12.3"

[dev-dependencies]
once_cell = "1.18.0"

[build-dependencies]
tonic-build = "0.10.2"
